Fixing logo alignment

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -634,16 +634,15 @@ table {
     margin-top: 20px;
     margin-bottom: 20px;
 
-    #logo {
-        float: none;
-        text-align: center;
-    }
-
-    .float-logo {
+    .no-float-logo {
         #logo {
-            float: left;
+            float: none;
+            margin-right: auto;
+            margin-left: auto;
+            text-align: center;
         }
     }
+
 }
 .hero-unit {
     border-radius: 0;
